...
              trailingIconTooltip: kTxFeeHelpTooltip,
              onPressed: onFeeHelp,
            ),
          ],
        ),
        ReviewButtonsStack(
          primaryKey: const ValueKey('send_confirm_button'),
          primaryLabel: confirmLabel,
          primaryLeadingIconName: confirmLeadingIconName,
          onPrimaryPressed: onConfirm,
          secondaryLabel: 'Cancel',
          onSecondaryPressed: onCancel,
        ),
...
